<resources>
    <string name="app_name">Contour</string>
    <string name="title_activity_maps">Map</string>
    <string name="moreAboutSwarm">The Swarm is forming. All current participants are displayed on the map.\n\nDo you want to be part of the Swarm, walking across a contour line in the Alps\?\n\nEnter your information now and let the world know where you\'re from\! Joining now will give you access to the full app experience. You can also explore the app now and join at a later stage.</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="RegisterBasicTitle">Some information about you:</string>
    <string name="Name">Name</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="city">City</string>
    <string name="PersonalTitle">Something more personal:</string>
    <string name="next">Next</string>
    <string name="title_activity_tracker">Activity Tracker</string>
    <string name="gender">Gender</string>
    <string name="height">Height (centimeters)</string>
    <string name="eyecolor">Eye Color</string>
    <string name="haircolor">Hair Color</string>
    <string name="prev">Prev</string>
    <string name="NextSwarm">Next</string>
    <string name="noselength">Nose Length (centimeters)</string>
    <string name="dimpleswhenyoulaugh">Do you have dimples when you laugh?</string>
    <string name="numberoffingers">Number of fingers</string>
    <string name="numberoftoes">Number of toes</string>
    <string name="shoesize">Shoe size</string>
    <string name="finishtitle">Almost finished!</string>
    <string name="finish">Finish</string>
    <string name="cometoitaly">Do you plan to come to Italy?</string>
    <string name="howmanypeople">How many people will come with you?</string>
    <string name="skip">Skip</string>
    <string name="informationMessagesTracker">Send a message to this person:</string>
    <string name="messageMoveAlong">Move along!</string>
    <string name="messageWalkOnTheLine">Walk on the line!</string>
    <string name="messageHiCutie">Hi cutie ;)</string>
    <string name="NeemPhoto">Take a picture</string>
    <string name="MayWeird">This may be weird…</string>
    <string name="firstName">First name</string>
    <string name="trackerSubscribe">To see the tracker, you need to subscribe.</string>
    <string name="dateFormat">(dd/mm/yyyy)</string>
</resources>
