<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register2_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@color/colorPrimary"
    tools:context="swarm_app_3.ehb.com.contourtheapp.Activities.Register2Personal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hoogtelijnenbackground"
        android:id="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/PersonalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/lblTitleRegi3"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblGender"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="5dp"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/gender" />

    <Spinner
        android:id="@+id/spnGender"
        android:layout_height="30dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_width="match_parent"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblHeight"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="5dp"
        android:text="@string/height"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="15"
        android:id="@+id/txtHeight"
        android:background="@color/lightgrey"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="5dp"
        android:textColor="?attr/colorPrimaryDark"
        android:paddingLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblEyeColor"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="5dp"
        android:text="@string/eyecolor"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spnEyeColor"
        android:layout_height="30dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_width="match_parent"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="5dp" />

    <TextView
        android:text="|"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/spnEyeColor"
        android:layout_alignStart="@+id/spnEyeColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblHairColor"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="5dp"
        android:text="@string/haircolor"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spnHairColor"
        android:layout_height="30dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_width="match_parent"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        app:srcCompat="@drawable/inschrijving2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp" />

    <TextView
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblNextRegi1"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:background="@android:color/white"
        android:onClick="goToRegi3"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:layout_marginEnd="23dp"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:text="@string/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblPrev"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:background="@android:color/white"
        android:onClick="goToRegi1"
        android:paddingLeft="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:layout_alignBaseline="@+id/lblNextRegi1"
        android:layout_alignBottom="@+id/lblNextRegi1"
        android:layout_alignEnd="@+id/lblGender" />

    <TextView
        android:text="|"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/spnGender"
        android:layout_alignStart="@+id/spnGender" />

    <TextView
        android:text="|"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/lblTitleRegi3"
        android:layout_alignStart="@+id/lblTitleRegi3" />

    <TextView
        android:text="|"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/txtHeight"
        android:layout_alignStart="@+id/txtHeight" />

</RelativeLayout>
