<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register1_basic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hoogtelijnenbackground"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="swarm_app_3.ehb.com.contourtheapp.Activities.Register1Basic">

    <TextView
        android:id="@+id/lblTitleRegi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/RegisterBasicTitle"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLineRegi1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="|"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblNameRegi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/Name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtNameRegi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLineRegi1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="|"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblFirstNameRegi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/firstName"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtFirstNameRegi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLineRegi1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="|"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblDateOfBirthRegi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/dateofbirth"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtDateOfBirthRegi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:inputType="date"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLineRegi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="|"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblCityRegi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/city"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtCityRegi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/lightgrey"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/TextView333333"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/inschrijving1" />

        <TextView
            android:id="@+id/lblNextRegi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:onClick="goToRegi2"
            android:padding="10dp"
            android:text="@string/next"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>
